# -SelfworkPython_OOP_GiulianaTecchio

./: Selfwork Python - OOP.ipynb
Modulo 2/: Selfwork Python - OOP.ipynb  esercizi.ipynb
Modulo 3/Esercizi 3/: Rag_Base.ipynb
Modulo 3/selfwork4_HRAss/4esercizio/hr-assistant/: .gitignore  pyproject.toml
Teoria/: LLM - OpenAI Chat Completion.ipynb  Mod3_.docx  Mod3_LLM - OpenAI Chat Completion.docx  esempio_rag.ipynb  gX78BNcduS0c9LnPdPOsFAJDUmsFQMVjYm79Vjsf.ipynb  python.docx
