[project]
name = "hr-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Giuliana Tecchio",email = "giulianatcch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.0"
dependencies = [
    "chromadb (>=1.5.9,<2.0.0)",
    "openai (>=2.43.0,<3.0.0)",
    "chainlit (>=2.11.1,<3.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "langchain-openai (>=1.3.2,<2.0.0)",
    "markitdown[all] (>=0.1.6,<0.2.0)"
]

[tool.poetry]
packages = [{include = "hr_assistant", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
